[workspace]
members = ["server", "database", "migrations", "client", "web", "shared", "logger"]

[profile.release]
lto = true
codegen-units = 1

[profile.release.package.web]
opt-level = "s"

[patch.crates-io]
# For tokio 1.0 compatibility
# basws-server = { path = "../basws/basws-server" }
# basws-shared = { path = "../basws/basws-shared" }
# sqlx-simple-migrator = { path = "../sqlx-simple-migrator" }
# magrathea = { path = "../magrathea" }
# kludgine = { path = "../kludgine" }
