[package]
name = "cosmicverge"
version = "0.0.26"
edition = "2021"
publish = false

[dependencies]
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", features = [
    "server-full",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.9"
async-trait = "0.1"
hyper = "0.14"
axum = "0.3"
url = "2"
log = "0.4"
tower = "0.4"
tower-http = { version = "0.1", features = ["fs"] }
