[package]
name = "cosmicverge"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
description = "The game client for Cosmic Verge"
license = "MIT"
repository = "https://github.com/khonsulabs/cosmicverge"

publish = false
edition = "2018"
keywords = ["sandbox", "game"]
categories = ["games"]
readme = "../README.md"

[dependencies]
kludgine = { git = "https://github.com/khonsulabs/kludgine.git", branch = "main", default-features = false, features = ["tokio-rt", "bundled-fonts"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
cosmicverge-shared = { path = "../shared" }
basws-client = "0.1"
anyhow = "1"
clap = "3.0.0-beta.2"
tracing = "0.1"
tracing-futures = { version = "0.2", default-features = false, features = ["futures-03"] }
tracing-subscriber = "0.2"
sled = "0.34"
zerocopy = "0.3"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
once_cell = "1"
webbrowser = "0.5"
async-channel = "1"
reqwest = "0.11"
chrono = "0.4"
