[package]
name = "database"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cosmicverge-shared = { path = "../shared" }
basws-server = "0.1"
migrations = { path = "../migrations" }
bcrypt = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
either = "*"
async-trait = "0.1"
maplit = "1"
thiserror = "1"
sqlx = { version = "0.5", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
] }
