[package]
name = "database"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
description = "Database access layer for cosmicverge-server"
license = "MIT"
repository = "https://github.com/khonsulabs/cosmicverge"

publish = false
edition = "2018"
keywords = ["sandbox", "game"]
categories = ["games"]
readme = "../README.md"

[features]
default = []
test-util = ["migrations/test-util"]

[dependencies]
cosmicverge-shared = { path = "../shared" }
basws-server = "0.1"
migrations = { path = "../migrations" }
bcrypt = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
either = "*"
async-trait = "0.1"
maplit = "1"
thiserror = "1"
sqlx = { version = "0.5", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
] }
tokio = "1"
dotenv = "0.15"
once_cell = "1"
cli-table = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["sync"] }
