[package]
name = "logger"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
description = "Code that is shared between the client and server of Cosmic Verge"
license = "MIT"
repository = "https://github.com/khonsulabs/cosmicverge"

publish = false
edition = "2018"
keywords = ["sandbox", "game"]
categories = ["games"]
readme = "../README.md"

[features]
default = ["archiver"]
archiver = ["database"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flume = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
async-trait = "0.1.38"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "io-std", "io-util"] }
anyhow = "1"
strum = "0.20"
strum_macros = "0.20"
tracing = "0.1"
tracing-subscriber = "0.2"
sled = "0.34"
once_cell = "1"
database = { path = "../database", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "test-util",
    "rt",
    "sync",
    "macros",
    "time",
] }
database = { path = "../database", features = ["test-util"] }
