[package]
name = "migrations"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
description = "PostgreSQL migrations for cosmicverge-server"
license = "MIT"
repository = "https://github.com/khonsulabs/cosmicverge"

publish = false
edition = "2018"
keywords = ["sandbox", "game"]
categories = ["games"]
readme = "../README.md"

[features]
default = []
test-util = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
sqlx-simple-migrator = "0.0.5"
once_cell = "1"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.5", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
] }
serde_json = "1"
futures = "0.3"
