[workspace]
members = ["server", "database", "migrations"]

[patch.crates-io]
cosmicverge-shared = { path = "../shared" }
# For tokio 1.0 compatibility
sqlx = { git = "https://github.com/launchbadge/sqlx.git" }
#basws-server = { path = "../../basws/basws-server" }
#basws-shared = { path = "../../basws/basws-shared" }