[workspace]
members = ["server", "database", "migrations"]

[patch.crates-io]
# For tokio 1.0 compatibility
# basws-server = { path = "../../basws/basws-server" }
# basws-shared = { path = "../../basws/basws-shared" }
# sqlx-simple-migrator = { path = "../../sqlx-simple-migrator" }
# magrathea = { path = "../../magrathea" }
