[package]
name = "cosmicverge-shared"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
basws-shared = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
euclid = { version = "0.22", features = ["serde"] }
once_cell = "1.5"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
log = "0.4"
approx = "0.4"
