[package]
name = "cosmicverge-shared"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"
publish = false

[features]
default = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "0.8", features = ["v4", "serde"] }
basws-shared = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
euclid = { version = "0.22", features = ["serde"] }
once_cell = "1.5"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
log = "0.4"
approx = "0.4"
redis = { version = "0.19", default-features = false, optional = true }
rand = "0.8"
persy = { version = "0.11", optional = true }
