[package]
name = "cosmicverge-shared"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
description = "Code that is shared between the client and server of Cosmic Verge"
license = "MIT"
repository = "https://github.com/khonsulabs/cosmicverge"

publish = false
edition = "2018"
keywords = ["sandbox", "game"]
categories = ["games"]
readme = "../README.md"
build = "../build.rs"

[features]
default = []
tokio-support = ["tokio", "tokio-util"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "0.8", features = ["v4", "serde"] }
basws-shared = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
euclid = { version = "0.22", features = ["serde"] }
once_cell = "1.5"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
log = "0.4"
approx = "0.4"
redis = { version = "0.19", default-features = false, optional = true }
rand = "0.8"
async-task = "4"
core_affinity = "0.5"
flume = "0.10"
futures-executor = "0.3"
futures-util = "0.3"
num_cpus = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tokio-util = { version = "0.6", features = ["rt"], optional = true }
