[package]
name = "web"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmicverge-shared = "0.0.1"
basws-yew = { version = "0.1.0-dev-8" }
yew = { version = "0.17", features = ["cbor"] }
yew-router = "0.14"
yew-bulma = "0.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "*", features = ["serde", "js-sys"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["UrlSearchParams", "NamedNodeMap", "Attr", "Window", "Performance"] }
log = "0.4"
wasm-logger = "0.2"
glow = "0.7"
once_cell = "1"
console_error_panic_hook = "0.1"
crossbeam = {version = "0.8"}

[patch.crates-io]
cosmicverge-shared = { path = "../shared" }
#yew-bulma = { path = "../../yew-bulma" }
