[package]
name = "web"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"
build = "../build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
opengl = ["glow"]

[dependencies]
cosmicverge-shared = { version = "0.0.1", features = ["wasm"] }
basws-yew = { version = "0.1" }
yew = { version = "0.17", features = ["cbor"] }
yew-router = "0.14"
yew-bulma = "0.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "js-sys"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "UrlSearchParams",
    "NamedNodeMap",
    "Attr",
    "Window",
    "Performance",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "Node",
    "HtmlCanvasElement",
    "TouchEvent",
    "TouchList",
    "Touch"
] }
log = "0.4"
wasm-logger = "0.2"
glow = { version = "0.7", optional = true }
once_cell = "1"
console_error_panic_hook = "0.1"
crossbeam = { version = "0.8" }
fluent-templates = "0.5"
unic-langid = "0.9"
include_dir = "0.6"
anyhow = "1"
url = "2"

[patch.crates-io]
cosmicverge-shared = { path = "../shared" }
#basws-yew = { path = "../../basws/basws-yew" }
#basws-shared = { path = "../../basws/basws-shared" }
#yew-bulma = { path = "../../yew-bulma" }
