[package]
name = "orchestrator"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmicverge-shared = "0.0.1"
redis = { version = "0.19", default-features = false, features = ["connection-manager", "aio", "tls", "tokio-comp", "tokio-native-tls-comp"] }
anyhow = "1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
async-channel = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }