[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

[dependencies]
cosmicverge-shared = "0.0.1"
basws-server = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", default-features = false, features = [
    "futures-03"
] }
tracing-subscriber = "0.2"
magrathea = "0.0.1"
async-trait = "0.1"
chrono = "0.4"
database = { path = "../database" }
jsonwebtoken = "7"
url = "2.1"
reqwest = { version = "0.11", features = ["json"] }