[package]
name = "cosmicverge-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"
build = "../../build.rs"

[dependencies]
cosmicverge-shared = { path = "../../shared", features = ["redis"] }
database = { path = "../database" }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", default-features = false, features = [
    "futures-03"
] }
tracing-subscriber = "0.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7"
url = "2.1"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"
redis = { version = "0.19", default-features = false, features = [
    "connection-manager",
    "aio",
    "tls",
    "tokio-comp",
    "tokio-native-tls-comp"
] }
async-channel = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
structopt = "0.3"
magrathea = { version = "0.0.2" }
